--- a/index.html
+++ b/index.html
@@ -27,48 +27,186 @@
 	<div class="reveal">
 		<div class="slides">
 
-			<section data-markdown="markdown/splash.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:"
-			 data-charset="iso-8859-15">
+			<section id="about-me">
+				<h1>Scrum</h1>
+				<p><small>Stuart Tottle</small></p>
 			</section>
 
-			<section>
-				<h3>Agenda</h3>
-				<p class="fragment">grow</p>
-				<p class="fragment">grow</p>
-				<p class="fragment">grow</p>
-				<p class="fragment">grow</p>
-				<p class="fragment">grow</p>
+			<section id="about-me">
+				<h3>ComparetheMarket.com</h3>
+				<aside class="notes">
+					<ul>
+						<li>where you work</li>
+						<li>what you do</li>
+						<li>why are you presenting about scrum</li>
+					</ul>
+				</aside>
 			</section>
 
-			<section>
-				<p>Folie 1</p>
+			<section id="agenda">
+				<ul>
+					<li class="fragment">Scrum</li>
+					<li class="fragment">Team</li>
+					<li class="fragment">Common Goal</li>
+					<li class="fragment">Meetings</li>
+					<li class="fragment">Sprint</li>
+				</ul>
+				<aside class="notes">
+					There five items in this presentation
+				</aside>
 			</section>
+
 			<section>
 				<section>
-					<p>Folie 2 a</p>
+					<h3>Scrum</h3>
+					<blockquote>
+						<small>These days we do not program software module-by-module, we program software feature-by-feature <i>(Mary Poppendieck)</i></small>
+					</blockquote>
 				</section>
 				<section>
-					<p>Folie 2 b</p>
+					<p>The solution?</p>
 				</section>
-			</section>
-
-			<section data-markdown>
-				<div data-template>
-					## Page title A paragraph with some text and a [link](http://hakim.se).
-				</div>
-			</section>
-
-			<section id="show-a-link">
-				<h1>Show a live link</h1>
-				<p>Slide 2 discussed here</p>
-				<p>See <a href="http://www.htmlcheats.com">HTMLCheats.com</a>
-					<p>
+				<section>
+					<p>A bridge</p>
+				</section>
 			</section>
 
 			<section>
-				<h1>Slide 3</h1>
-				<p>How does one revisit an arbitrary slide in code?</p>
-				<p>Visit internal slide<a href="#/show-a-link"> 2</a>
+				<section>
+					<h3>Team</h3>
+					<blockquote>
+						<small>A quote about being a team <i>(Some one)</i></small>
+					</blockquote>
+				</section>
+				<section>
+					<p>Product Owner</p>
+					<p>Project Manager</p>
+					<aside class="notes">
+						<ul>
+							<li>This could be the same person</li>
+							<li>Decision maker</li>
+							<li>Available</li>
+						</ul>
+					</aside>
+				</section>
+				<section>
+					<p>Business Analyst</p>
+					<aside class="notes">
+						They are the glue
+					</aside>
+				</section>
+				<section>
+					<p>Tester</p>
+					<p>4 x Developers</p>
+					<aside class="notes">
+						<ul>
+							<li>A tester that can also and look to automate</li>
+							<li>Tech leads </li>
+							<li>Archeticts</li>
+						</ul>
+					</aside>
+				</section>
+			</section>
+
+			<section>
+				<section>
+					<h3>Common Goal</h3>
+					<blockquote>
+						<small>A quote about being a team <i>(Some one)</i></small>
+					</blockquote>
+				</section>
+				<section>
+					<p>Buy in</p>
+				</section>
+				<section>
+					<p>Sprint length</p>
+				</section>
+				<section>
+					<p>User stories</p>
+				</section>
+				<section>
+					<p>Bugs</p>
+				</section>
+				<section>
+					<p>Spikes</p>
+				</section>
+				<section>
+					<p>Acceptance criteria</p>
+				</section>
+				<section>
+					<p>Story points</p>
+				</section>
+				<section>
+					<p>Capacity</p>
+				</section>
+				<section>
+					<p>Documentation</p>
+					<aside class="notes">
+						Remember that everyone has to document something - api specs - wiki's - security
+					</aside>
+				</section>
+				<section>
+					<p>Purpose of meetings</p>
+				</section>
+			</section>
+
+			<section>
+				<section>
+					<h3>Meetings</h3>
+					<blockquote>
+						<small>A quote about being a team <i>(Some one)</i></small>
+					</blockquote>
+				</section>
+				<section>
+					<p>Backlog refinement</p>
+				</section>
+				<section>
+					<p>Sprint planning</p>
+				</section>
+				<section>
+					<p>Stand ups</p>
+				</section>
+				<section>
+					<p>Ad-Hoc – meetings about meetings</p>
+				</section>
+			</section>
+
+			<section>
+				<section>
+					<h3>Sprint</h3>
+					<blockquote>
+						<small>A quote about being a team <i>(Some one)</i></small>
+					</blockquote>
+				</section>
+				<section>
+					<p>The goal</p>
+				</section>
+				<section>
+					<p>Velocity</p>
+				</section>
+				<section>
+					<p>Pairing/Mobbing</p>
+				</section>
+				<section>
+					<p>Analysis</p>
+				</section>
+				<section>
+					<p>Reporting</p>
+				</section>
+			</section>
+
+			<section>
+				<h3>Questions</h3>
+			</section>
+
+			<section>
+				<p>
+					<a href="http://stottle.uk">stottle.uk</a>
+				</p>
+				<p>
+					<a href="mailto:stuart@sotttle.uk">stuart@stottle.uk</a>
+				</p>
+				<p><small>2017</small></p>
 			</section>
 		</div>
 	</div>
