--- a/index.html
+++ b/index.html
@@ -28,17 +28,30 @@
 		<div class="slides">
 
 			<section id="about-me">
-				<h1>Scrum</h1>
+				<h1>Preparing for Scrum</h1>
 				<p><small>Stuart Tottle</small></p>
+				<aside class="notes">
+					<p>
+						There is not a single implementation of scrum and it's all down to interpretation and experiences. How should a project prepare
+						for scrum and what needs be defined and universally understood for successful teams.
+					</p>
+					<p>
+						I'm 17 years in IT have worked in support, infrastructure, projects and development. I'm passionate about code, but i also
+						believe planning and process is important so therefore understanding project methodologies will help me plan my code
+						better.
+					</p>
+				</aside>
 			</section>
 
 			<section id="about-me">
-				<h3>ComparetheMarket.com</h3>
+				<img src="assets/aboutme.jpg" alt="">
 				<aside class="notes">
 					<ul>
 						<li>where you work</li>
 						<li>what you do</li>
 						<li>why are you presenting about scrum</li>
+						<li>worked in teams that have created products based on business requirements</li>
+						<li>didn't want to play lip service to agile</li>
 					</ul>
 				</aside>
 			</section>
@@ -47,9 +60,9 @@
 				<ul>
 					<li class="fragment">Scrum</li>
 					<li class="fragment">Team</li>
-					<li class="fragment">Common Goal</li>
 					<li class="fragment">Meetings</li>
 					<li class="fragment">Sprint</li>
+					<li class="fragment">Common Goal</li>
 				</ul>
 				<aside class="notes">
 					There five items in this presentation
@@ -62,12 +75,27 @@
 					<blockquote>
 						<small>These days we do not program software module-by-module, we program software feature-by-feature <i>(Mary Poppendieck)</i></small>
 					</blockquote>
+					<aside class="notes">
+						<ul>
+							<li>Database</li>
+							<li>API</li>
+							<li>Security</li>
+							<li>View</li>
+							<li>Logging</li>
+						</ul>
+					</aside>
 				</section>
 				<section>
-					<p>The solution?</p>
-				</section>
-				<section>
-					<p>A bridge</p>
+					<img src="assets/solution.jpg" alt="">
+					<aside class="notes">
+						<p>CRM system</p>
+						<ul>
+							<li>Capture name and contact details</li>
+							<li>Send marketing emails</li>
+							<li>securely edit their own details</li>
+							<li>communication log</li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 
@@ -75,8 +103,11 @@
 				<section>
 					<h3>Team</h3>
 					<blockquote>
-						<small>A quote about being a team <i>(Some one)</i></small>
+						<small>Great things in business are never done by one person. They're done by a team of people <i>(Steve Jobs)</i></small>
 					</blockquote>
+				</section>
+				<section>
+					<img src="assets/team.jpg" alt="">
 				</section>
 				<section>
 					<p>Product Owner</p>
@@ -93,6 +124,10 @@
 					<p>Business Analyst</p>
 					<aside class="notes">
 						They are the glue
+						<p>They ask why</p>
+						<p>liaison to other teams - design/ux - infrastructure - legal - marketing</p>
+						<p>they will be the reason you can write more code</p>
+						<p>runs and organises the meetings</p>
 					</aside>
 				</section>
 				<section>
@@ -102,7 +137,7 @@
 						<ul>
 							<li>A tester that can also and look to automate</li>
 							<li>Tech leads </li>
-							<li>Archeticts</li>
+							<li>Architects</li>
 						</ul>
 					</aside>
 				</section>
@@ -110,52 +145,13 @@
 
 			<section>
 				<section>
-					<h3>Common Goal</h3>
-					<blockquote>
-						<small>A quote about being a team <i>(Some one)</i></small>
-					</blockquote>
-				</section>
-				<section>
-					<p>Buy in</p>
-				</section>
-				<section>
-					<p>Sprint length</p>
-				</section>
-				<section>
-					<p>User stories</p>
-				</section>
-				<section>
-					<p>Bugs</p>
-				</section>
-				<section>
-					<p>Spikes</p>
-				</section>
-				<section>
-					<p>Acceptance criteria</p>
-				</section>
-				<section>
-					<p>Story points</p>
-				</section>
-				<section>
-					<p>Capacity</p>
-				</section>
-				<section>
-					<p>Documentation</p>
-					<aside class="notes">
-						Remember that everyone has to document something - api specs - wiki's - security
-					</aside>
-				</section>
-				<section>
-					<p>Purpose of meetings</p>
-				</section>
-			</section>
-
-			<section>
-				<section>
 					<h3>Meetings</h3>
 					<blockquote>
-						<small>A quote about being a team <i>(Some one)</i></small>
+						<small>The least productive people are usually the ones who are most in favour of holding meetings <i>(Thomas Sowell)</i></small>
 					</blockquote>
+				</section>
+				<section>
+					<img src="assets/meeting.png" alt="">
 				</section>
 				<section>
 					<p>Backlog refinement</p>
@@ -175,8 +171,11 @@
 				<section>
 					<h3>Sprint</h3>
 					<blockquote>
-						<small>A quote about being a team <i>(Some one)</i></small>
+						<small>This is no time for ease and comfort. It is time to dare and endure <i>(Winston Churchill)</i></small>
 					</blockquote>
+				</section>
+				<section>
+					<img src="assets/sprint.jpg" alt="">
 				</section>
 				<section>
 					<p>The goal</p>
@@ -192,6 +191,74 @@
 				</section>
 				<section>
 					<p>Reporting</p>
+				</section>
+			</section>
+
+			<section>
+				<section>
+					<h3>Common Goal</h3>
+					<blockquote>
+						<small>It is a great boost for confidence in a squad when there is not just one or two players scoring goals, but the whole team is contributing <i>(Harry Kane)</i></small>
+					</blockquote>
+				</section>
+				<section>
+						<img src="assets/goal.jpg" alt="">
+					</section>
+				<section>
+					<p>Buy in</p>
+					<aside class="notes">
+						<p>
+							Staff will enjoy working on a team where everyone agrees on process and are all aim for the same target.
+						</p>
+					</aside>
+				</section>
+				<section>
+					<p>Sprint length</p>
+				</section>
+				<section>
+					<p>User stories</p>
+					<aside class="notes">
+						<ul>
+							<li>BA is working on these all the time to ensure they are in a good place for refinement</li>
+							<li>Bugs</li>
+							<li>Spikes</li>
+							<li>Acceptance criteria</li>
+							<li>Story points</li>
+						</ul>
+					</aside>
+				</section>
+				<section>
+					<p>Capacity</p>
+				</section>
+				<section>
+					<p>Support and Infrastructure</p>
+					<aside class="notes">
+						<ul>
+							<li>Servers</li>
+							<li>Turn around time</li>
+							<li>Support like to feel involved</li>
+							<li>Security</li>
+							<li>Code reviews</li>
+						</ul>
+					</aside>
+				</section>
+				<section>
+					<p>Documentation</p>
+					<aside class="notes">
+						Remember that everyone has to document something - api specs - wiki's - security
+					</aside>
+				</section>
+				<section>
+					<p>SOLID</p>
+					<aside class="notes">
+						Let's be pragmatic
+					</aside>
+				</section>
+				<section>
+					<p>Testing</p>
+				</section>
+				<section>
+					<p>Purpose of meetings</p>
 				</section>
 			</section>
 
