removed items not required

--- a/index.html
+++ b/index.html
@@ -181,9 +181,6 @@
 					<p>The goal</p>
 				</section>
 				<section>
-					<p>Velocity</p>
-				</section>
-				<section>
 					<p>Pairing/Mobbing</p>
 				</section>
 				<section>
@@ -216,7 +213,7 @@
 					<p>Sprint length</p>
 				</section>
 				<section>
-					<p>User stories</p>
+					<p>Backlog Items/User stories</p>
 					<aside class="notes">
 						<ul>
 							<li>BA is working on these all the time to ensure they are in a good place for refinement</li>
@@ -238,7 +235,6 @@
 							<li>Turn around time</li>
 							<li>Support like to feel involved</li>
 							<li>Security</li>
-							<li>Code reviews</li>
 						</ul>
 					</aside>
 				</section>
@@ -254,12 +250,6 @@
 						Let's be pragmatic
 					</aside>
 				</section>
-				<section>
-					<p>Testing</p>
-				</section>
-				<section>
-					<p>Purpose of meetings</p>
-				</section>
 			</section>
 
 			<section>
@@ -271,7 +261,7 @@
 					<a href="http://stottle.uk">stottle.uk</a>
 				</p>
 				<p>
-					<a href="mailto:stuart@sotttle.uk">stuart@stottle.uk</a>
+					<a href="mailto:hello@sotttle.uk">hello@stottle.uk</a>
 				</p>
 				<p><small>2017</small></p>
 			</section>
