--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 						<ul>
 							<li>This could be the same person</li>
 							<li>Decision maker</li>
+							<li>Define the priorities for the project</li>
 							<li>Available</li>
 						</ul>
 					</aside>
@@ -155,9 +156,19 @@
 				</section>
 				<section>
 					<p>Backlog refinement</p>
+					<aside class="notes">
+						Devs question the requirements to ensure they understand them
+					</aside>
 				</section>
 				<section>
 					<p>Sprint planning</p>
+					<aside class="notes">
+						<ul>
+							<li>Retrospective</li>
+							<li>The work that the team feel they can complete in the coming sprint</li>
+							<li>Velocity</li>
+						</ul>
+					</aside>
 				</section>
 				<section>
 					<p>Stand ups</p>
@@ -199,14 +210,13 @@
 					</blockquote>
 				</section>
 				<section>
-						<img src="assets/goal.jpg" alt="">
-					</section>
+					<img src="assets/goal.jpg" alt="">
+				</section>
 				<section>
 					<p>Buy in</p>
 					<aside class="notes">
-						<p>
-							Staff will enjoy working on a team where everyone agrees on process and are all aim for the same target.
-						</p>
+						<p>Staff will enjoy working on a team where everyone agrees on process and are all aim for the same target</p>
+						<p>They are doing it because they believe in it</p>
 					</aside>
 				</section>
 				<section>
