--- a/index.html
+++ b/index.html
@@ -174,7 +174,13 @@
 					<p>Stand ups</p>
 				</section>
 				<section>
-					<p>Ad-Hoc – meetings about meetings</p>
+					<p>Workshops - Ad-Hoc</p>
+					<aside class="notes">
+						<ul>
+							<li>Workshop to understand a feature as a team</li>
+							<li>Ad-hoc to understand stories and complete detail</li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 
@@ -220,9 +226,6 @@
 					</aside>
 				</section>
 				<section>
-					<p>Sprint length</p>
-				</section>
-				<section>
 					<p>Backlog Items/User stories</p>
 					<aside class="notes">
 						<ul>
@@ -230,12 +233,9 @@
 							<li>Bugs</li>
 							<li>Spikes</li>
 							<li>Acceptance criteria</li>
-							<li>Story points</li>
+							<li>Definition of Done</li>
 						</ul>
 					</aside>
-				</section>
-				<section>
-					<p>Capacity</p>
 				</section>
 				<section>
 					<p>Support and Infrastructure</p>
@@ -263,10 +263,33 @@
 			</section>
 
 			<section>
-				<h3>Questions</h3>
+				<h3>Conclusion</h3>
+				<aside class="notes">
+					Scrum is a useful tool, but is not the silver bullet, buy in and understanding is so important as it empowers the team own the product and the process
+				</aside> 
 			</section>
 
 			<section>
+				<h3>Questions</h3>
+				<ul style="color: #999; font-size:50%">
+					<li>Capacity</li>
+					<li>Sprint Length</li>
+					<li>Sizing/Story points</li>
+					<li>Acceptance Criteria Format</li>
+					<li>User story states</li>
+					<li>Tasks</li>
+					<li>Prioritisation/Importance</li>
+					<li>Source control</li>
+					<li>Releases</li>
+					<li>CI/CD</li>
+					<li>TDD/BDD</li>
+					<li>Coding standings/Linting</li>
+					<li>Alerts/Logging</li>
+				</ul>
+			</section>
+
+			<section>
+				<p>Thank you</p>
 				<p>
 					<a href="http://stottle.uk">stottle.uk</a>
 				</p>
