--- a/index.html
+++ b/index.html
@@ -198,28 +198,6 @@
 					<p>The goal</p>
 				</section>
 				<section>
-					<p>Analysis</p>
-				</section>
-			</section>
-
-			<section>
-				<section>
-					<h3>Common Goal</h3>
-					<blockquote>
-						<small>It is a great boost for confidence in a squad when there is not just one or two players scoring goals, but the whole team is contributing <i>(Harry Kane)</i></small>
-					</blockquote>
-				</section>
-				<section>
-					<img src="assets/goal.jpg" alt="">
-				</section>
-				<section>
-					<p>Buy in</p>
-					<aside class="notes">
-						<p>Staff will enjoy working on a team where everyone agrees on process and are all aim for the same target</p>
-						<p>They are doing it because they believe in it</p>
-					</aside>
-				</section>
-				<section>
 					<p>Backlog Items/User stories</p>
 					<aside class="notes">
 						<ul>
@@ -233,11 +211,12 @@
 					</aside>
 				</section>
 				<section>
-					<p>Pairing/Mobbing</p>
+					<p>Pairing/Mobbing - SOLID</p>
 					<aside class="notes">
 						<ul>
 							<li>Training for new members and juniors</li>
 							<li>Instant code reviews</li>
+							<li>Without the bells and whistles</li>
 						</ul>
 					</aside>
 				</section>
@@ -250,18 +229,6 @@
 							<li>Support like to feel involved</li>
 							<li>Security</li>
 						</ul>
-					</aside>
-				</section>
-				<section>
-					<p>Documentation</p>
-					<aside class="notes">
-						Remember that everyone has to document something - api specs - wiki's - security
-					</aside>
-				</section>
-				<section>
-					<p>SOLID</p>
-					<aside class="notes">
-						Let's be pragmatic
 					</aside>
 				</section>
 			</section>
@@ -278,6 +245,7 @@
 			<section>
 				<h3>Questions</h3>
 				<ul style="color: #999; font-size:50%">
+					<li>Documentation</li>
 					<li>Reporting</li>
 					<li>Capacity</li>
 					<li>Sprint Length</li>
